_generated-doc/2.2/config/quarkus-oidc-common-config-group-oidc-common-config-proxy.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-common-config-group-oidc-common-config-proxy_configuration]]link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.proxy.host]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.proxy.host[quarkus.oidc.proxy.host]`

[.description]
--
The host (name or IP address) of the Proxy.
 Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.proxy.port]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.proxy.port[quarkus.oidc.proxy.port]`

[.description]
--
The port number of the Proxy. Default value is 80.
--|int 
|`80`


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.proxy.username]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.proxy.username[quarkus.oidc.proxy.username]`

[.description]
--
The username, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.proxy.password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.proxy.password[quarkus.oidc.proxy.password]`

[.description]
--
The password, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.-tenant-.proxy.host]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.-tenant-.proxy.host[quarkus.oidc."tenant".proxy.host]`

[.description]
--
The host (name or IP address) of the Proxy.
 Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.-tenant-.proxy.port]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.-tenant-.proxy.port[quarkus.oidc."tenant".proxy.port]`

[.description]
--
The port number of the Proxy. Default value is 80.
--|int 
|`80`


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.-tenant-.proxy.username]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.-tenant-.proxy.username[quarkus.oidc."tenant".proxy.username]`

[.description]
--
The username, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.-tenant-.proxy.password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc.-tenant-.proxy.password[quarkus.oidc."tenant".proxy.password]`

[.description]
--
The password, if Proxy needs authentication.
--|string 
|

|===