_generated-doc/3.6/config/quarkus-oidc-common-config-group-oidc-common-config-proxy.adoc

:summaryTableId: quarkus-oidc-common-config-group-oidc-common-config-proxy
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-common-config-group-oidc-common-config-proxy_configuration]]link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.proxy.host]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.proxy.host[quarkus.oidc-client.proxy.host]`


[.description]
--
The host (name or IP address) of the Proxy. +
Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.proxy.port]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.proxy.port[quarkus.oidc-client.proxy.port]`


[.description]
--
The port number of the Proxy. Default value is 80.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`80`


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.proxy.username]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.proxy.username[quarkus.oidc-client.proxy.username]`


[.description]
--
The username, if Proxy needs authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.proxy.password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.proxy.password[quarkus.oidc-client.proxy.password]`


[.description]
--
The password, if Proxy needs authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.-id-.proxy.host]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.-id-.proxy.host[quarkus.oidc-client."id".proxy.host]`


[.description]
--
The host (name or IP address) of the Proxy. +
Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__PROXY_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__PROXY_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.-id-.proxy.port]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.-id-.proxy.port[quarkus.oidc-client."id".proxy.port]`


[.description]
--
The port number of the Proxy. Default value is 80.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__PROXY_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__PROXY_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`80`


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.-id-.proxy.username]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.-id-.proxy.username[quarkus.oidc-client."id".proxy.username]`


[.description]
--
The username, if Proxy needs authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__PROXY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__PROXY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.-id-.proxy.password]]`link:#quarkus-oidc-common-config-group-oidc-common-config-proxy_quarkus.oidc-client.-id-.proxy.password[quarkus.oidc-client."id".proxy.password]`


[.description]
--
The password, if Proxy needs authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===